<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Hello"/>

</LinearLayout>